Fikser z-index-issue med animasjon

--- a/src/components/layouts/index-page/navigation/area-page-navigation-bar/AreaPageNavigationBar.module.scss
+++ b/src/components/layouts/index-page/navigation/area-page-navigation-bar/AreaPageNavigationBar.module.scss
@@ -3,6 +3,8 @@
 .areaPageNavigation {
     position: relative;
     display: flex;
+    z-index: 2;
+
     @media #{common.$mq-screen-mobile} {
         margin: 0 -0.5rem;
     }
